[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "turtle"
path = "lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2018"
crate-type = ["lib"]
required-features = []

[[bin]]
name = "turtle"
path = "daemon.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2018"
required-features = []

[dependencies]

[dependencies.hyper]
version = "0.14.12" 
features = ["full"]

[dependencies.cookie]
version = "0.15.1"

[dependencies.serde]
version = "1.0.130"
[dependencies.json]
version = "0.12.4"

[dependencies.jsonwebtoken]
version = "7.2.0"
[dependencies.rsa]
version = "0.5.0"
[dependencies.rand]
version = "0.8.4"

[dependencies.juniper]
version = "0.15.7"
[dependencies.juniper_hyper]
version = "0.8.0"

[dependencies.redis]
version = "0.21.1"
features = ["tokio-comp", "tokio-native-tls-comp", "cluster"]

[dependencies.tokio]
version = "1.10.1"
features = ["full"]
